# chuk-mcp-virtual-fs

./: .gitignore  README.md  config.yaml  manifest.in  pyproject.toml
src/chuk_mcp_virtual_fs/: simple_snapshot_manager.py  tools.py
tests/: test_memory_provider.py  test_snapshot_tools.py
